2007-05-03    <Jim@LS1>

	* CPU/run.c Tim ODonnell [timodonnell@gmail.com]:
	Fixed handling of overflow from add of low-order word in MADD and
	UMADD.

2007-04-15    <Jim@LS1>

	* Documentation/spim.html:
	Updated MIPS documenation links to reflect new file
	versions. Included link to Nokia 660 port.

2007-01-14    <Jim@LS1>

	* CPU/inst.c (inst_decode) Cai Hongxu [caihongxu@gmail.com]:
	Did not correctly decode SPECIAL2 instructions (e.g., madd).

2006-08-28    <Jim@LS1>

	* spim/Makefile:
	Explicitly include exception handler path for "make test" to
	eliminate need to install it before running test.

2006-08-26    <Jim@LS1>

	* Version 7.3

	* spim/Makefile, xspim/Imakefile:
	Fix installation process of man pages and make xspim compile under
	Cygwin. Do not install man page by default (too many different
	options).

2006-08-23    <Jim@LS1>

	* CPU/string-stream.c [Jeremy Huddleston
	jeremyhu@eecs.berkeley.edu]:
	Segfault in ss_printf caused by incorrect usage of va_ interface
	when string overflows and needs to be reallocated.

	* xspim/xspim.c, spim/spim.c [Jeremy Huddleston
	jeremyhu@eecs.berkeley.edu]:
	Read SPIM_EXCEPTION_HANDLER environment variable.

2006-08-20    <Jim@LS1>

	* CPU/scanner.l [many xspim bugs on Linux]:
	flex 2.5.33 changed the polarity of the yy_init flag without
	providing a backwardly compatible way of setting it (sigh).

	* spim-utils.c [Jeremy Huddleston jeremyhu@berkeley.edu]:
	Allow a semicolon deliminated list of exception files, rather than
	just a single file.

	* parser.y [Piotr Bieganowski bieganow@wsisiz.edu.pl]:
	Memory corruption caused spim to crash when a label was defined
	twice in succession.

2006-08-19    <Jim@LS1>

	* PCSPimView.cpp:
	Update register and memory display even after a parse error when
	reading a file.

	* parser.y, scanner.{h, l} [Jordi Ferrer Plana jferrerp@eia.udg.es]:
	Added unnecessary null character between items in a list of
	strings from .asciiz.

2005-11-25    <Jim@LS1>
